WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19577
JSCore does not compile in C++ environments where C99 headers are not present
https://bugs.webkit.org/show_bug.cgi?id=19577
Summary
JSCore does not compile in C++ environments where C99 headers are not present
Simon Hausmann
Reported
2008-06-16 06:34:24 PDT
Some JSCore public header files include stdbool.h. The stdbool.h header is a C99 feature, defining the "_Bool" type as well as the "true" and "false" constants. But it's completely unnecessary in C++ as the language already defines the "bool" type and its two values.
Attachments
Fix compilation in C++ environments where C99 headers are not present
(2.52 KB, patch)
2008-06-16 06:35 PDT
,
Simon Hausmann
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2008-06-16 06:35:30 PDT
Created
attachment 21725
[details]
Fix compilation in C++ environments where C99 headers are not present Proposed patch from Thiago Macieira <
tjmaciei@trolltech.com
>
Simon Hausmann
Comment 2
2008-06-16 06:39:45 PDT
I think the patch is fine, but since this touches the header files of the public API I'd be great to get a review from someone with experience on handling those :)
Darin Adler
Comment 3
2008-06-16 08:53:35 PDT
Comment on
attachment 21725
[details]
Fix compilation in C++ environments where C99 headers are not present Seems OK. r=me
Simon Hausmann
Comment 4
2008-06-16 14:23:37 PDT
Landed in
r34606
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug