2008-06-16  Thiago Macieira  <tjmaciei@trolltech.com>

Reviewed by Darin.

        https://bugs.webkit.org/show_bug.cgi?id=19577

        Fix compilation in C++ environments where C99 headers are not present

        The stdbool.h header is a C99 feature, defining the "_Bool" type as well as the
        "true" and "false" constants. But it's completely unnecessary in C++ as the
        language already defines the "bool" type and its two values.

        * API/JSBase.h:
        * API/JSContextRef.h:
        * API/JSObjectRef.h:
        * API/JSStringRef.h:
        * API/JSValueRef.h:

Canonical link: https://commits.webkit.org/27054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34606 268f45cc-cd09-0410-ab3c-d52691b4dbfc