JavaScriptCore/API/JSBase.h
@@ -26,7 +26,9 @@
 #ifndef JSBase_h
 #define JSBase_h
 
+#ifndef __cplusplus
 #include <stdbool.h>
+#endif
 
 /* JavaScript engine interface */
 
