JavaScriptCore/API/JSObjectRef.h
@@ -29,7 +29,9 @@
 #include <JavaScriptCore/JSBase.h>
 #include <JavaScriptCore/JSValueRef.h>
 
+#ifndef __cplusplus
 #include <stdbool.h>
+#endif
 #include <stddef.h> /* for size_t */
 
 #ifdef __cplusplus
